# Bounty-Tower

./: .clang-format  .gitignore  Bounty Tower Roadmapish.txt  Bug list for Dehaku.txt  CMakeLists.txt  Changelog.txt  Credits.txt  Effects.h  Galaxy.h  Game.h  Grand Plan.txt  Ideas.txt  JobManager.h  Marketing.txt  Notes - Todo.txt  README.md  Random Events.txt  References.txt  Settlement.cbp  Towers and Art Needs.txt  Weaponry.cpp  autoformat.py  main.cpp  unused_functions.txt  version.h
data/: Bartender Quips.txt  Status Aspects.txt  items.txt  main_useful_bits.txt  npcs.txt  oldItems.txt  statusEffects.txt
data/gfx/: Aim.tga  Azabul.tga  Bacon.tga  Cashwip.pdn  CritterInventoryHud - Copy2.pdn  CritterInventoryHud BeltVersion.pdn  Fae WIP.pdn  Food.tga  Fortune Fortress Title.pdn  FruitTree.tga  Gun.tga  Human - Copy.tga  Human.tga  ImagesA.tga  NewHuman.tga  NewZombie.tga  PopMachine.tga  Robot.tga  SpriteSheetBTPsylinWorkFile.pdn  Sword.tga  Turret.tga  Water.tga  Zombie.tga
data/maps/Towers/: map235050.txt  map6365050.txt  map6375050.txt  map6385050.txt
data/shaders/: Pulse.vert  Shockwave.frag  Shockwave.vert  destructivewave.frag  glow.frag
doc/: 3d_pathfinding.txt  etc.txt  faction_body_definition.txt  galaxy_h.txt  initialize_items.txt  load_items.txt  meta_profile.txt  old_npc_tracing.txt  planet_logic.txt  skills.txt  spawn_item.txt  todo.txt  unused_functions.txt
src/: BountyTower.cpp  BountyTower.h  Bullet.cpp  Bullet.h  Camera.cpp  Camera.h  Effects.cpp  Effects.h  Faction.cpp  Faction.h  FactionJobSecurity.cpp  FactionJobSecurity.h  Galaxy.cpp  Galaxy.h  Game.h  Globals.cpp  Globals.h  Images.cpp  Images.h  InputState.cpp  InputState.h  Items.cpp  Items.h  JobManager.cpp  JobManager.h  NPC.h  Networking.cpp  Networking.h  Particle.cpp  Particle.h  PathingController.cpp  PathingController.h  SaveLoad.cpp  SaveLoad.h  Shaders.cpp  Shaders.h  Skills.cpp  Skills.h  Sounds.cpp  Sounds.h  (+32 more)
